--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-sample",
+  "name": "calendar-grid",
   "version": "0.1.0",
   "main": "dist/main.js",
   "author": "rikishi <rikishi.protonmail.ch>",
