--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "calendar-grid",
   "version": "0.1.0",
   "main": "src/index.js",
-  "module": "src/index.js",
+  "module": "dist/index.js",
   "author": "rikishi <rikishi.protonmail.ch>",
   "license": "MIT",
   "electronVersion": "1.6.10",
   "scripts": {
-    "build": "gulp",
+    "install": "gulp --env=production",
+    "build": "gulp --env=production",
     "dev": "gulp; gulp watch",
     "flow": "flow check",
     "start": "gulp connect",
